--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,14 @@ compileTestJava {
 }
 
 dependencies {
-    testImplementation("com.codeborne:selenide:5.25.1")
-    testRuntimeOnly("org.slf4j:slf4j-simple:1.7.32")
+    testImplementation(
+            "com.codeborne:selenide:5.25.0",
+            "com.github.javafaker:javafaker:0.12")
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
+    testRuntimeOnly("org.slf4j:slf4j-simple:1.7.29")
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
 }
 
 test {
